[project]
name = "warehouse-management"
version = "0.1.0"
description = ""
authors = [
    { name = "aleksei", email = "bscadet@yandex.ru" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0"
dataclasses-json = "^0.5.7"
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"
isort = "^6.0.1"

[poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.poetry]
packages = [
    { include = "domain", from = "src" },
    { include = "infrastructure", from = "src" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"